--- a/Echo/Views/InputDialog.xaml
+++ b/Echo/Views/InputDialog.xaml
@@ -5,7 +5,6 @@
         Height="150" Width="300"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         WindowStyle="None"
-        
         >
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -16,8 +15,8 @@
         <TextBlock x:Name="txtQuestion" Text="{x:Static resx:LangResx.Input_API_Key}"/>
         <TextBox x:Name="txtAnswer" Margin="0,20,0,29" Grid.RowSpan="3"/>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="确定" Width="75" Margin="0,0,10,0" Click="OkButton_Click"/>
-            <Button Content="取消" Width="75" Click="CancelButton_Click"/>
+            <Button Content="{x:Static resx:LangResx.Confirm}" Width="75" Margin="0,0,10,0" Click="OkButton_Click"/>
+            <Button Content="{x:Static resx:LangResx.Cancel}" Width="75" Click="CancelButton_Click"/>
         </StackPanel>
     </Grid>
 </Window>
